<resources>
    <string name="app_name">Project 4-1 Phone Photo Prints App</string>
    <string name="txtTitle">Phone Photo Prints</string>
    <string name="txtNumberOfPrints">Number Of Prints</string>
    <string name="txtSize">Size</string>
    <string name="txtResult">Result</string>
    <string name="btnOrder">ORDER PRINTS</string>
    <string name="rB4X6">4 x 6 (19 cents)</string>
    <string name="rB5X7">5 x 7 (49 cents)</string>
    <string name="rB8X10">8 x 10 (79cents)</string>
</resources>
